# aoc-2023

./: Cargo.toml
src/day-01/: main.rs  short.txt
src/day-02/: input.txt  main.rs
src/day-03/: main.rs  short2.txt
src/day-04/: main.rs
src/day-05/: main.rs  seeds.rs
src/day-06/: main.rs
src/day-07/: main.rs
src/day-08/: main.rs
src/day-09/: main.rs  sequence.rs
