[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/day-03/main.rs"

[[bin]]
name = "day-04"
path = "src/day-04/main.rs"

[[bin]]
name = "day-05"
path = "src/day-05/main.rs"

[dependencies]
regex = "1.10.2"
itertools = "0.12.0"
